
    * Support GSSAPI authentication for SOCKS.

	* Support for multiple users using a system-wide daemon
	  (ctrlproxyd) that can be started at system start-up. 
	  (#25)
	
	* Network configuration can now also be specified in 
	  ~/.ctrlproxy/config.

	* Allow setting default-nick, default-username and 
	  default-fullname in [global] section.

  BUG FIXES
   
    * Support 901 response codes.

	* Don't write to nickserv file either if autosave=false.

	* Avoid unknown command warning when sending PASS.

	* Recognize UHNAMES and ESILENCE 005 parameters.

	* Properly track nick names when doing fallback.

	* Disable autosave by default.

	* Properly spoof netsplit when ctrlproxy loses the connection to the
	  server.

	* Fail gracefully if getpeername() doesn't work.

	* Don't crash when no argument is specified to STOPLISTENER. (#201)

	* Fix segfault on FreeBSD because it doesn't like freeaddrinfo(NULL). 
	  (#202)

  INTERNALS

    * Use generic storage for MODEs.

Ctrlproxy 3.0.7 2008-06-14

  FEATURES

    * Add 'create-implicit' option.

  BUG FIXES

    * Handle client-specific admin commands being run without a client 
      more gracefully.

    * Be less verbose about unredirectable responses.

    * Avoid usage of blocking /dev/random for SSL code. (Andreas Schneider)

    * Move time in ctcp requests. (#197)

    * Support storing ban exception lists, realname ban lists and 
      join throttling (MODE +e, MODE +d and MODE +J) as supported by hyperion.

    * Fix handling of channel and user modes. (#196)

    * Avoid disconnecting clients that are still waiting for a connection. 
      (#198, David Ford)

    * Fix parsing of ``learn-nickserv'' setting.

    * Support listening on IPv6.

	* Handle 326 and 328 WHOIS replies.

  INTERNALS

    * Import non-blocking GIOChannel improvements from libsoap into 
      the SSL wrapper code. (Andreas Schneider)


Ctrlproxy 3.0.6 2008-04-13

  IMPROVEMENTS

    * Add report-time-offset setting.
    